--- a/arch/arm64/boot/dts/freescale/imx8mm.dtsi
+++ b/arch/arm64/boot/dts/freescale/imx8mm.dtsi
@@ -890,8 +890,8 @@
 				clocks = <&clk IMX8MM_CLK_UART1_ROOT>,
 					 <&clk IMX8MM_CLK_UART1_ROOT>;
 				clock-names = "ipg", "per";
-				dmas = <&sdma1 22 4 0>, <&sdma1 23 4 0>;
-				dma-names = "rx", "tx";
+				//dmas = <&sdma1 22 4 0>, <&sdma1 23 4 0>;
+				//dma-names = "rx", "tx";
 				status = "disabled";
 			};
 
@@ -902,8 +902,8 @@
 				clocks = <&clk IMX8MM_CLK_UART3_ROOT>,
 					 <&clk IMX8MM_CLK_UART3_ROOT>;
 				clock-names = "ipg", "per";
-				dmas = <&sdma1 26 4 0>, <&sdma1 27 4 0>;
-				dma-names = "rx", "tx";
+				//dmas = <&sdma1 26 4 0>, <&sdma1 27 4 0>;
+				//dma-names = "rx", "tx";
 				status = "disabled";
 			};
 
