--- a/arch/arm64/boot/dts/freescale/imx8ulp-rom2620-a1.dts
+++ b/arch/arm64/boot/dts/freescale/imx8ulp-rom2620-a1.dts
@@ -145,7 +145,7 @@
 
 	usdhc2_pwrseq: usdhc2_pwrseq {
 		compatible = "mmc-pwrseq-simple";
-		reset-gpios = <&pcal6408 2 GPIO_ACTIVE_LOW>;
+		reset-gpios = <&gpiof 26 GPIO_ACTIVE_LOW>;
 	};
 
 	bt_sco_codec: bt_sco_codec {
@@ -482,42 +482,21 @@
 };
 
 &usdhc2 {
-	ssigned-clocks = <&pcc4 IMX8ULP_CLK_USDHC2>;
-	assigned-clock-rates = <396000000>;
 	pinctrl-names = "default", "state_100mhz", "state_200mhz";
 	pinctrl-0 = <&pinctrl_usdhc2_pte>;
 	pinctrl-1 = <&pinctrl_usdhc2_pte>;
 	pinctrl-2 = <&pinctrl_usdhc2_pte>;
 	wp-gpios = <&gpiof 27 GPIO_ACTIVE_HIGH>;
 	cd-gpios = <&gpiof 28 GPIO_ACTIVE_LOW>;
-	bus-width = <4>;
-	status = "okay";
-};
-
-/*
-&usdhc2 {
-	pinctrl-names = "default", "state_100mhz", "state_200mhz", "sleep";
-	pinctrl-0 = <&pinctrl_usdhc2_pte>;
-	pinctrl-1 = <&pinctrl_usdhc2_pte>;
-	pinctrl-2 = <&pinctrl_usdhc2_pte>;
-	pinctrl-3 = <&pinctrl_usdhc2_pte>;
 	mmc-pwrseq = <&usdhc2_pwrseq>;
 	max-frequency = <100000000>;
 	bus-width = <4>;
 	keep-power-in-suspend;
 	non-removable;
-	wakeup-source;
 	fsl,sdio-async-interrupt-enabled;
+	no-1-8-v;
 	status = "okay";
-
-	wifi_wake_host {
-		compatible = "nxp,wifi-wake-host";
-		interrupt-parent = <&gpioe>;
-		interrupts = <7 IRQ_TYPE_LEVEL_LOW>;
-		interrupt-names = "host-wake";
-	};
 };
-*/
 
 &iomuxc1 {
 	pinctrl_dsi: dsigrp {
