--- a/arch/arm64/boot/dts/freescale/imx8ulp-rom2620-a1.dts
+++ b/arch/arm64/boot/dts/freescale/imx8ulp-rom2620-a1.dts
@@ -265,8 +265,10 @@
 		reg = <0x3c>;
 		clocks = <&cgc2 IMX8ULP_CLK_DSI_PHY_REF>;
 		clock-names = "xclk";
-		powerdown-gpios = <&pca6416_1 8 GPIO_ACTIVE_HIGH>;
-		reset-gpios = <&pca6416_1 7 GPIO_ACTIVE_LOW>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_cam>;
+		powerdown-gpios = <&gpiod 22 GPIO_ACTIVE_LOW>;
+		reset-gpios = <&gpiod 23 GPIO_ACTIVE_LOW>;
 		status = "okay";
 		port {
 			ov5640_mipi_ep: endpoint {
@@ -656,6 +658,12 @@
 		>;
 	};
 
+	pinctrl_cam: camgrp {
+		fsl,pins = <
+			MX8ULP_PAD_PTD22__PTD22		0x3 /* CAM_PWR */
+			MX8ULP_PAD_PTD23__PTD23		0x3 /* CAM_RST */
+		>;
+	};
 };
 
 &cameradev {
